--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cole-gannaway",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cole-gannaway.github.io/Cole-Gannaway/",
+  "homepage": "www.colegannaway.com",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
